	new file:   ZGame/3dsMax/lib3ds_2_0/src/Makefile.am
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds.h
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds.rc
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_atmosphere.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_background.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_camera.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_chunk.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_chunktable.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_file.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_impl.h
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_io.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_light.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_material.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_math.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_matrix.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_mesh.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_node.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_quat.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_shadow.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_track.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_util.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_vector.c
	new file:   ZGame/3dsMax/lib3ds_2_0/src/lib3ds_viewport.c

+---------+---------+---------+---------+---------+---------+---------+---------+ 
haptix.2015/05/26.17_00_03.46.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
evolution3d.2015/05/26.18_06_58.79.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
