@@ -59,7 +59,7 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-05-26 18:06:46 L.219'21194 T3130689372.K ~273 +----+----+----+----+----+
+     Zndex_E : //z 2015-05-27 15:23:30 L.218'30990 T3621318130.K ~278 +----+----+----+----+----+
      TimeCnt : //z 2015-05-22 17:23:06 L.223'23814 T1570279794.K ~10  +----+----+----+----+----+
      Reg.Cnt : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15  +----+----+----+----+----+
      #15  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15    V+.273  L+.295  
@@ -78,7 +78,7 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-05-26 18:06:46 L.219'21194 T3130689372.K ~288   R+.14   L+.294  --+----+
+     Version : //z 2015-05-27 15:23:30 L.218'30990 T3621318130.K ~293   R+.15   L+.322  --+----+
      #15  V+ : //z 2015-05-26 16:59:26 L.219'25234 T553790784 .K ~285   R+.14   L+.293  
      #14  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~273   R+.15   L+.296  V+.273  
      #14  V+ : //z 2015-05-21 18:07:22 L.224'21158 T2791718354.K ~266   R+.14   L+.280  
@@ -319,20 +319,14 @@ ________________________________________________________________________________
 用cmake生成vs解决方案时，如果项目比较多，比如引用了很多开源库之类的，如果对项目进行分类，那源文件组织结构将清晰很多
 
 在CMakeLists.txt的
-
 cmake_minimum_required(VERSION 2.6)
 
 前面加上这么一句
-
 set_property(GLOBAL PROPERTY USE_FOLDERS On)
 
- 
-
 然后就可以在目标之后，即
-
 add_library,add_executable
 
 加入一句
-
 set_target_properties(${prj_target} PROPERTIES FOLDER "test") 
 #endregion //z 2015-05-22 17:22:59 L.223'23821 BG57IV3@XCL T1570244025.K.F4146951713-+----+----+
